# own-finances-rust-api

./: Cargo.toml
src/: api_routes.rs  db.rs  main.rs  models.rs
