[package]
name = "own-finances-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.6.1"
tokio-compat-02 = "0.2.0"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
wither = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
futures = "0.3.21"
dotenv = "0.15.0"
